--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Paris</h2>
+                <h2>belize</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Berlin</h2>
+                <h2>barcelona</h2>
             </div>
+
+            <div class="destination" id="Tokyo">
+                <h2>Tokyo</h2>
+            </div>
+
+            <div class="destination" id="Paris">
+                <h2>Paris</h2>
+            </div>
+
+            <div class="destination" id="scotland">
+                <h2>Scotland</h2>
+            </div>   
+
         </div>
     </div>
 
